relative paths for GitHub web page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M2 W4D1</title>
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="container">
@@ -37,6 +37,6 @@
       </section>
       <section class="row grid" id="jobsFoundContainer"></section>
     </main>
-    <script src="/assets/scaricabile.js"></script>
+    <script src="./assets/scaricabile.js"></script>
   </body>
 </html>
