--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <section class="row grid" id="jobsFoundContainer"></section>
     </main>
-    <script src="/assets/scaricabile.js"></script>
+    <script src="./assets/scaricabile.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
       lucide.createIcons()
